Some bugfixing - now works fine on all browsers with some layout issues on non-webkit ones

--- a/frontend/src/scss/style.scss
+++ b/frontend/src/scss/style.scss
@@ -54,10 +54,18 @@ p {
 		z-index: 1;
 		display: flex;
 		flex-direction: column;
+		width: 90%;
+		width: -webkit-fit-content;
+		width: -moz-fit-content;
 		width: fit-content;
+		height: 90%;
+		height: -webkit-fit-content;
+		height: -moz-fit-content;
 		height: fit-content;
 		max-width: 90%;
 		max-height: 90%;
+		margin: auto;
+		padding: 0;
 	}
 
 	&__content {
@@ -66,7 +74,13 @@ p {
 		border-radius: 1em;
 		overflow: hidden;
 		box-shadow: 0 0 1em #000;
+		width: auto;
+		width: -webkit-fit-content;
+		width: -moz-fit-content;
 		width: fit-content;
+		height: auto;
+		height: -webkit-fit-content;
+		height: -moz-fit-content;
 		height: fit-content;
 		max-width: 100%;
 		max-height: 100%;
@@ -82,7 +96,22 @@ p {
 		&-container {
 			padding: 0;
 			background-color: rgba(0, 0, 0, .5);
+		  margin: 0;
 		  margin-bottom: -2em;
+			height: 100%;
+			height: -webkit-fit-content;
+			height: -moz-fit-content;
+			height: fit-content;
+			width: 100%;
+			width: -webkit-fit-content;
+			width: -moz-fit-content;
+			width: fit-content;
+			display: flex;
+
+			span {
+				height: 100%;
+				width: 100%;
+			}
 		}
 
 		&-caption {
@@ -214,7 +243,6 @@ p {
 			margin: 0;
 			border-radius: 0;
 			background-color: #000000;
-			min-height: 100%;
 			height: 100%;
 			width: 100%;
 			display: flex;
